--- a/src/components/layouts/navbar/Navbar.css
+++ b/src/components/layouts/navbar/Navbar.css
@@ -21,7 +21,16 @@
     list-style-type:none;
     padding-right:5%;
   }
-  
+  .link-list a {
+    text-decoration: none;
+    color:inherit;
+    transition: transform 0.5s ease-in-out;
+  }
+
+  .link-list a:hover {
+    background-color: #77d7cc;
+  }
+
   .hamburger-menu{
     position:absolute;
     left:4vw;
@@ -33,9 +42,10 @@
     border:none;
     display: none;
   }
-  .menuIcon,
-  .menuIcon:before,
-  .menuIcon:after {
+ 
+  .menu-icon,
+  .menu-icon:before,
+  .menu-icon:after {
     content:'';
     position:absolute;
     height: 3px;
@@ -44,21 +54,25 @@
     border-radius: 10px;
     left:0;
     display:block;
-    transition:transform 0.3s ease-in-out;
+    transition:all 0.3s ease-in-out;
   }
-  .menuIcon::before{
+
+  .menu-icon::before{
     top: -10px;
   }
-  .menuIcon::after {
+  .menu-icon::after {
     bottom:-10px;
   }
-  
-  .menu-icon.open::before {
-    transform: translateY(0) rotate(45deg);
+  .menu-icon.visible {
+    background-color: transparent;
+  }
+ 
+  .menu-icon.visible::before {
+    transform: translateY(10px) rotate(45deg);
   }
   
-  .menu-icon.open::after {
-    transform: translateY(0) rotate(-45deg);
+  .menu-icon.visible::after {
+    transform: translateY(-10px) rotate(-45deg);
   }
   .hamburger-menu.visible{
     display:block;
@@ -69,13 +83,19 @@
     display:none;
     border: none;
     cursor: pointer;
+    margin-right:3vw;
+  }
+  .quick-add-button a{
     font-weight: 800;
     color:rgb(165, 159, 159);
     font-size: 1.5rem;
-    padding-right:15%;
+    transition: transform 0.5s ease-in-out;
+    
   }
-  
-  
+  .quick-add-button a :hover {
+    color: #77d7cc;
+    transform: scale(1.3);
+  }
   
   @media (max-width:640px){
     .hamburger-menu {
