--- a/src/components/pages/add-todo/Add.css
+++ b/src/components/pages/add-todo/Add.css
@@ -22,7 +22,7 @@
     gap:10%;
     height:30vh;
     background-color: #a8d4ea;
-    padding-bottom:5%;
+    padding-bottom:7vh;
 }
 .new-item-label{
     color:#4e8d87;
@@ -66,6 +66,29 @@
     transform:scale(0.9);
     background-color: #61a59f;
 }
+.image-box{
+    display: flex;
+    justify-content:flex-end;
+    margin:10%;
+}
+
+.list-image{
+    height:20vh;
+   
+}
+.pen-image{
+    height: 15vh;
+    animation: slideFromLeftToRight 5s infinite;
+}
+
+@keyframes slideFromLeftToRight {
+    from {
+        transform: translateX(-100%);
+      }
+      to {
+        transform: translateX(0);
+      }
+    }
 
 @media (min-width:480px) {
     .new-item-form{
@@ -85,9 +108,13 @@
         padding: 1% 3%;
     }
 }
-@media (min-width:900px){
+
+@media (min-width:790px){
     .new-item-form{
         padding-bottom: 8%;
+    }
+    .image-box{
+        margin:7%;
     }
 }
 @media (min-width:1200px){
