updated add-close-button margin, and new-item-form height

--- a/src/components/pages/add-todo/Add.css
+++ b/src/components/pages/add-todo/Add.css
@@ -7,10 +7,10 @@
     font-size: 2rem;
     font-weight:600;
     text-align: right;
-    padding: 5% 5% 0 0 ;
     color:#4e8d87;
     cursor: pointer;
     transition:transform 0.5 ease-in-out;
+    margin: 1vh 1vw 0 0;
 }
 .add-close-button:hover{
     color:#376661;
@@ -20,9 +20,10 @@
     display:flex;
     flex-direction: column;
     gap:10%;
-    height:30vh;
+    height:fit-content;
     background-color: #a8d4ea;
     padding-bottom:7vh;
+
 }
 .new-item-label{
     color:#4e8d87;
@@ -43,7 +44,7 @@
     color:#3b7570;
     font-weight:600;
     height:2rem;
-    margin:0 5%;
+    margin:5% 5% 0 5%;
     padding:0.5% 1%;
 }
 
@@ -60,6 +61,7 @@
     color:#235853;
     border:2px solid  rgba(223, 227, 231, 0.525);
     transition: transform 0.3 ease-in-out;
+    margin-top:3vh;
 }
 
 .new-item-add-button:hover{
@@ -90,11 +92,7 @@
       }
     }
 
-@media (min-width:480px) {
-    .new-item-form{
-        height:33vh;
-    }
-}
+
 
 @media (min-width:700px) {
     .new-item-label{
@@ -110,17 +108,14 @@
 }
 
 @media (min-width:790px){
-    .new-item-form{
-        padding-bottom: 8%;
+  
     }
     .image-box{
         margin:7%;
     }
-}
+    
 @media (min-width:1200px){
-    .new-item-form{
-        padding-bottom: 10%;
-    }
+   
     .add-close-button{
         font-size: 2.3rem;
     }
